--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <div class="navbar__listes">
             <a href="#" class="navbar__listes--link">Conseil</a>
             <a href="#" class="navbar__listes--link">Aceuil</a>
-            <a href="#" class="langue">عربي</a>
+            <a href="#" class="langue">عربي
+                <img class="langue__icolangue" src="./Design/Assets/SVG/Icon material-language.svg" alt="">
+            </a>
         </div>
     </div>
     <article class="info">
@@ -27,7 +29,9 @@
     </article>
     <div class="container">
         <div class="secOne">
-            <img class="secOne__img" src="./Design/Assets/png/Group_80.png" alt="">
+            <div class="secOne__img">
+                <img src="./Design/Assets/png/Group_80.png" alt="">
+            </div>
             <div class="secOne__cntnt">
                 <h1 class="secOne__cntnt--h1"> Vous pensez avoir été exposé au<br> Coronavirus COVID-19 et avez des
                     symptômes ? </h1>
@@ -35,7 +39,7 @@
                 <p class="secOne__cntnt--p">Je reste vigilant ?<br> Je programme une téléconsultation ?<br> J'appelle le
                     15 ?<br>
                     Faites le test pour répondre en citoyen<br> éclairé selon vos symptômes.</p>
-                <a class="secOne__cntnt--a" href="#">Demarer le test</a>
+                <button class="secOne__cntnt--a">Demarer le test</button>
             </div>
         </div>
         <h1 class="symptomes">Quels sont les symptômes à surveiller ?</h1>
@@ -80,7 +84,7 @@
         <section class="test">
             <h1 class="test__h1">Vous pensez avoir été exposé au Coronavirus COVID-19 et avez des symptômes ? </h1>
             <img class="test__img" src="./Design/Assets/png/1f637.png" alt=""><br>
-            <a class="test__a" href="#">Demarer le test</a>
+            <button class="test__a">Demarer le test</button>
 
         </section>
         <div class="logo-footer">
@@ -91,7 +95,9 @@
                 <div class="nav__listes">
                     <a href="#" class="nav__listes--a">Conseil</a>
                     <a href="#" class="nav__listes--a">Aceuil</a>
-                    <a href="#" class="langue">عربي</a>
+                    <a href="#" class="nav__listes--a langue2">عربي
+                        <img class="langue__icolangue" src="./Design/Assets/SVG/Icon material-language.svg" alt="">
+                    </a>
                 </div>
             </div>
             <div class="footer__contact">
