fin de la deuxiéme page

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="navbar">
         <img class="navbar__logo" src="./Design/Assets/SVG/logo__sante.svg" alt="">
         <div class="navbar__listes">
-            <a href="#" class="navbar__listes--link">Conseil</a>
-            <a href="#" class="navbar__listes--link">Aceuil</a>
+            <a href="./htmlFiles/conseil.html" class="navbar__listes--link">Conseil</a>
+            <a href="index.html" class="navbar__listes--link current">Aceuil</a>
             <a href="#" class="langue">عربي
                 <img class="langue__icolangue" src="./Design/Assets/SVG/Icon material-language.svg" alt="">
             </a>
@@ -45,7 +45,7 @@
         <h1 class="symptomes">Quels sont les symptômes à surveiller ?</h1>
         <div class="fourSymp">
             <div class="fourSymp__card">
-                <img class="fourSymp__card--img" src="./Design/Assets/png/Calque 2.png" alt="">
+                <img class="fourSymp__card--img fiévre" src="./Design/Assets/png/Tracé 871.png" alt="">
                 <p class="fourSymp__card--p">Fièvre</p>
             </div>
             <div class="fourSymp__card">
