--- a/htmlFiles/conseil.html
+++ b/htmlFiles/conseil.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TestCVD</title>
     <link rel="stylesheet" href="../src/css/style.css">
 </head>
 
@@ -69,7 +69,8 @@
             <h1>Informations</h1><br>
             <h2>Obtenez des informations à jour<br> en provenance de Gouvernement.fr</h2>
         </div><br>
-        <div><a class="informations__infortow" href="#">http://www.covidmaroc.ma</a></div><br>
+        <div><a class="informations__infortow" href="http://www.covidmaroc.ma/"
+                target="_blanck">http://www.covidmaroc.ma</a></div><br>
         <div><a class="informations__inforthree" href="#">Ce qu'il faut savoir</a></div>
     </div>
     <h1 class="symptomes">Quels sont les symptômes à surveiller ?</h1>
@@ -137,8 +138,8 @@
                 <a href="#" class="nav__listes--a langue2">عربي
                     <img class="langue__icolangue" src="../Design/Assets/SVG/Icon material-language.svg" alt="">
                 </a>
-                <a href="#" class="nav__listes--a">Conseil</a>
-                <a href="#" class="nav__listes--a">Aceuil</a>
+                <a href="../htmlFiles/conseil.html" class="nav__listes--a">Conseil</a>
+                <a href="../index.html" class="nav__listes--a">Aceuil</a>
             </div>
         </div>
         <div class="footer__contact">
@@ -159,7 +160,11 @@
 
 
 
-    <script src="../src/js/general.js"></script>
+    <div id="big-modl">
+        <img class="popimg" src="../Design/Assets/png/cons.jpg" alt="">
+    </div>
+    <script src="../src/js/main.js"></script>
+    <script src="../src/js/pop.js"></script>
 </body>
 
 </html>
