--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
                 <p class="secOne__cntnt--p">Je reste vigilant ?<br> Je programme une téléconsultation ?<br> J'appelle le
                     15 ?<br>
                     Faites le test pour répondre en citoyen<br> éclairé selon vos symptômes.</p>
-                <button class="secOne__cntnt--a">Demarer le test</button>
+
+                <a class="secOne__cntnt--a" href="./quiz/quiz.html">Demarer le test</a>
             </div>
         </div>
         <h1 class="symptomes">Quels sont les symptômes à surveiller ?</h1>
@@ -84,7 +85,7 @@
         <section class="test">
             <h1 class="test__h1">Vous pensez avoir été exposé au Coronavirus COVID-19 et avez des symptômes ? </h1>
             <img class="test__img" src="./Design/Assets/png/1f637.png" alt=""><br>
-            <button class="test__a">Demarer le test</button>
+            <a class="test__a" href="./quiz/quiz.html">Demarer le test</a>
 
         </section>
         <div class="logo-footer">
@@ -96,8 +97,8 @@
                     <a href="#" class="nav__listes--a langue2">عربي
                         <img class="langue__icolangue" src="./Design/Assets/SVG/Icon material-language.svg" alt="">
                     </a>
-                    <a href="#" class="nav__listes--a">Conseil</a>
-                    <a href="#" class="nav__listes--a">Aceuil</a>
+                    <a href="./htmlFiles/conseil.html" class="nav__listes--a">Conseil</a>
+                    <a href="index.html" class="nav__listes--a">Aceuil</a>
                 </div>
             </div>
             <div class="footer__contact">
@@ -125,7 +126,7 @@
 
     </div>
 
-    <script src="./src/js/general.js"></script>
+    <script src="./src/js/main.js"></script>
 </body>
 
 </html>
