adding logo ico

--- a/htmlFiles/conseil.html
+++ b/htmlFiles/conseil.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TestCVD</title>
+    <link href="../Design/Assets/ico/vrs.ico" rel="shortcut icon" />
     <link rel="stylesheet" href="../src/css/style.css">
 </head>
 
