--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>TestCVD</title>
+    <link href="../Design/Assets/ico/vrs.ico" rel="shortcut icon" />
     <link rel="stylesheet" href="../src/css/style.css">
     <!-- <link rel="stylesheet" href="quiz.css"> -->
 </head>
